# lmutils

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
.github/workflows/: post-release.yaml  rust.yaml
benches/: expand_packing.rs  glm.rs  ld_encode_and_missing.rs  ld_maf.rs  ld_values.rs  lm.rs  logistic_regression.rs  mat_v_rkyv.rs  mean.rs  pack.rs  r2.rs  r2_simd.rs  scale.rs  standardize.rs  unpack.rs  variance.rs
src/: aic.rs  binom.rs  calc.rs  coef.rs  elnet.rs  error.rs  errors.rs  file.rs  glm.rs  ld.rs  lib.rs  lm.rs  mat.rs  matrix.rs  mean.rs  norm.rs  pack.rs  packing.rs  r.rs  r2.rs  scale.rs  spline.rs  standardize.rs  sum.rs  transform.rs  variance.rs
src/calc/: mean.rs  mod.rs  variance.rs
src/ld/: encode_and_missing.rs  maf.rs  mod.rs  values.rs
tests/: mat-df.RData  mat-f64.RData  mat-i32.RData  mat-str.RData  mat-v-f64.RData  mat-v-i32.RData  mat.cbor  mat.csv  mat.json  mat.tsv  test.bed  test.bim  test.cbor  test.csv  test.fam  test.json  test.mat  test.prune.in  test.prune.out  test.rkyv  test.tsv  test.txt
