[package]
name = "lmutils"
version = "0.2.31"
edition = "2021"
description = "A set of utilities for working with linear regression models"
license = "MIT"
repository = "https://github.com/mrvillage/lmutils"

[dependencies]
extendr-api = { version = "0.6.0", features = ["either"] }
faer = "0.19"
flate2 = "1.0.30"
libc = "0.2.155"
memfile = "0.3.2"
rayon = "1.10.0"
rkyv = { version = "0.7.44", features = [
  "validation",
  "size_64",
  "std",
  "archive_le",
], default-features = false }
serde = { version = "1.0.202", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.117"
statrs = "0.17.1"
thiserror = "1.0.61"
tracing = { version = "0.1.40", features = ["log"] }
cfg-if = "1.0"
pulp = "0.18"
rand = "0.8.5"
rand_distr = "0.4.3"
num_cpus = "1.16.0"

[dev-dependencies]
test-log = "0.2.16"
assert_float_eq = "1.1.3"
diol = "0.6.0"

[build-dependencies]
libc = "0.2.155"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[bench]]
name = "r2_simd"
harness = false

[[bench]]
name = "mat_v_rkyv"
harness = false

[[bench]]
name = "logistic_regression"
harness = false
